fix spacing on desktop

--- a/app/assets/stylesheets/desktop.css.scss
+++ b/app/assets/stylesheets/desktop.css.scss
@@ -152,7 +152,7 @@ body[data-controller="posts"] {
     }
 
     section.main {
-      padding-top: 1em;
+      padding-top: 0.8em;
 
       .content {
         .footnotes {
